[gd_scene load_steps=3 format=2]

[ext_resource path="res://Display/Settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://Display/MainMenu/Sprites/MainMenuBase.png" type="Texture" id=2]

[node name="Settings" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerMain" type="VBoxContainer" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 195.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="ContainerMain"]
margin_right = 320.0
margin_bottom = 31.0
text = "Settings
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="ContainerMain"]
margin_top = 35.0
margin_right = 320.0
margin_bottom = 195.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVol" type="Label" parent="ContainerMain/List"]
margin_right = 320.0
margin_bottom = 31.0
text = "Main Volume: 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVolBar" type="ProgressBar" parent="ContainerMain/List/MainVol"]
margin_left = 112.418
margin_top = -0.327515
margin_right = 202.418
margin_bottom = 13.6725
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVolUp" type="Button" parent="ContainerMain/List/MainVol"]
margin_left = 221.237
margin_top = -3.09061
margin_right = 241.237
margin_bottom = 16.9094
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVolDown" type="Button" parent="ContainerMain/List/MainVol"]
margin_left = 249.237
margin_top = -3.09061
margin_right = 269.237
margin_bottom = 16.9094
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVol" type="Label" parent="ContainerMain/List"]
margin_top = 35.0
margin_right = 320.0
margin_bottom = 66.0
text = "Music Volume: 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolBar" type="ProgressBar" parent="ContainerMain/List/MusicVol"]
margin_left = 112.418
margin_top = -0.327515
margin_right = 202.418
margin_bottom = 13.6725
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolUp" type="Button" parent="ContainerMain/List/MusicVol"]
margin_left = 221.237
margin_top = -3.09061
margin_right = 241.237
margin_bottom = 16.9094
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolDown" type="Button" parent="ContainerMain/List/MusicVol"]
margin_left = 249.237
margin_top = -3.09061
margin_right = 269.237
margin_bottom = 16.9094
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXVol" type="Label" parent="ContainerMain/List"]
margin_top = 70.0
margin_right = 320.0
margin_bottom = 101.0
text = "SFX Volume: 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXVolBar" type="ProgressBar" parent="ContainerMain/List/SFXVol"]
margin_left = 112.418
margin_top = -0.327515
margin_right = 202.418
margin_bottom = 13.6725
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXVolUp" type="Button" parent="ContainerMain/List/SFXVol"]
margin_left = 221.237
margin_top = -3.09061
margin_right = 241.237
margin_bottom = 16.9094
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXVolDown" type="Button" parent="ContainerMain/List/SFXVol"]
margin_left = 249.237
margin_top = -3.09061
margin_right = 269.237
margin_bottom = 16.9094
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mute" type="Label" parent="ContainerMain/List"]
margin_top = 105.0
margin_right = 320.0
margin_bottom = 136.0
text = "Mute:
"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteToggle" type="CheckButton" parent="ContainerMain/List/Mute"]
margin_left = 37.4798
margin_top = -8.61993
margin_right = 113.48
margin_bottom = 31.3801
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="ContainerMain/List"]
margin_top = 140.0
margin_right = 320.0
margin_bottom = 160.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -320.0
margin_right = 640.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 640, 320 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="NinePatchRect"]
margin_left = 46.0
margin_top = 61.0
margin_right = 1233.5
margin_bottom = 592.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LMargin" type="Label" parent="NinePatchRect/Container"]
margin_right = 80.0
margin_bottom = 14.0
size_flags_horizontal = 5
size_flags_vertical = 0
text = "                    "

[node name="Main" type="VBoxContainer" parent="NinePatchRect/Container"]
margin_left = 84.0
margin_right = 1103.0
margin_bottom = 531.0
size_flags_horizontal = 3

[node name="Settings" type="Label" parent="NinePatchRect/Container/Main"]
margin_right = 1019.0
margin_bottom = 14.0
text = "Settings"

[node name="DividerMain" type="TextureRect" parent="NinePatchRect/Container/Main"]
margin_top = 18.0
margin_right = 1019.0
margin_bottom = 18.0

[node name="Contents" type="HBoxContainer" parent="NinePatchRect/Container/Main"]
margin_top = 22.0
margin_right = 1019.0
margin_bottom = 36.0

[node name="Options" type="VBoxContainer" parent="NinePatchRect/Container/Main/Contents"]
margin_bottom = 14.0

[node name="DividerSub" type="TextureRect" parent="NinePatchRect/Container/Main/Contents"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="SLMargin" type="Label" parent="NinePatchRect/Container/Main/Contents"]
margin_left = 8.0
margin_right = 88.0
margin_bottom = 14.0
size_flags_horizontal = 5
size_flags_vertical = 0
text = "                    "

[node name="BaseSound" type="VBoxContainer" parent="NinePatchRect/Container/Main/Contents"]
margin_left = 92.0
margin_right = 935.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SRMargin" type="Label" parent="NinePatchRect/Container/Main/Contents"]
margin_left = 939.0
margin_right = 1019.0
margin_bottom = 14.0
size_flags_horizontal = 5
size_flags_vertical = 0
text = "                    "

[node name="RMargin" type="Label" parent="NinePatchRect/Container"]
margin_left = 1107.0
margin_right = 1187.0
margin_bottom = 14.0
size_flags_horizontal = 5
size_flags_vertical = 0
text = "                    "
[connection signal="pressed" from="ContainerMain/List/MainVol/MainVolUp" to="." method="_on_MainVolUp_pressed"]
[connection signal="pressed" from="ContainerMain/List/MainVol/MainVolDown" to="." method="_on_MainVolDown_pressed"]
[connection signal="pressed" from="ContainerMain/List/MusicVol/MusicVolUp" to="." method="_on_MusicVolUp_pressed"]
[connection signal="pressed" from="ContainerMain/List/MusicVol/MusicVolDown" to="." method="_on_MusicVolDown_pressed"]
[connection signal="pressed" from="ContainerMain/List/SFXVol/SFXVolUp" to="." method="_on_SFXVolUp_pressed"]
[connection signal="pressed" from="ContainerMain/List/SFXVol/SFXVolDown" to="." method="_on_SFXVolDown_pressed"]
[connection signal="pressed" from="ContainerMain/List/Mute/MuteToggle" to="." method="_on_MuteToggle_pressed"]
[connection signal="pressed" from="ContainerMain/List/Back" to="." method="_on_Back_pressed"]
